service.yaml
kind: Service
apiVersion: v1
metadata:
  name: workshop-app
spec:
  selector:
    app: workshop-app
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 8085
